[package]
name = "template-fuzzer"
version = "0.1.0"
[package.authors]
workspace = true
[package.description]
workspace = true
[package.edition]
workspace = true
[package.license]
workspace = true
[package.repository]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-runtime-fuzzer = { workspace = true }
ziggy = { workspace = true }

generic-runtime-template = { path = "../runtime" }
parachains-common = { workspace = true }

parity-scale-codec = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }

sp-consensus-aura = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }

pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

cumulus-pallet-parachain-system = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-test-relay-sproof-builder = { workspace = true }

[features]
default = [ "std", "try-runtime" ]
std = [
	"frame-support/std",
	"generic-runtime-template/std",
	"pallet-timestamp/std",
	"parity-scale-codec/std",
	"sp-consensus-aura/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"generic-runtime-template/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]

[lints]
workspace = true
