[package]
name = "pallet-confidential-assets"
authors = { workspace = true }
description = "pallet supporting confidential transfers"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

confidential-assets-primitives = { path = "../../primitives/confidential-assets", default-features = false }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "dep:serde",
  "confidential-assets-primitives/std",
]