[package]
name = "pallet-fhe"
authors = { workspace = true }
description = "FHE Pallet to rotate keys and store results"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-runtime    = { workspace = true }

fhe-primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
  "fhe-primitives/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "parity-scale-codec/std",
  "scale-info/std",
]